--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </h3>
 
 
-            <div class="contactus-form-container">
+            <div class="form-container">
               <form class="form" action="">
                 <div class="formfield-container">
                   <input class="formfield" 
