--- a/index.html
+++ b/index.html
@@ -21,29 +21,6 @@
           <div class="logo-text">unaid Ansari</div>
         </div>
 
-        <!-- <div class="nav-items">
-          <div>
-            <a href="#projects">Projects</a>
-          </div>
-          <div>
-            <a href="#skills">Skills</a>
-          </div>
-          <div>
-            <a href="#contactme">Contact Me</a>
-          </div>
-        </div> -->
-
-        <!-- <div class="bar-icon"><i class="fa-solid fa-bars bar" onclick="openMenu()"></i></div> -->
-
-        <!-- <div class="ham-btn">
-          <input type="checkbox" id="menu-toggle" />
-          <label for="menu-toggle" class="menu-btn-container">
-            <div class="menu-btn1"></div>
-            <div class="menu-btn2"></div>
-            <div class="menu-btn3"></div>
-          </label>
-        </div> -->
-
 
         <!-- hamburger -->
         <div class="ham-container">
@@ -81,10 +58,15 @@
             I am a <span class="role"></span>
           </div>
           <div class="intro-left-desc">
-            I am a CSE major student at NIT Calicut and here is my portfolio website.
-            Open for learning and opportunities.
+            I'm a Computer Science major at NIT Calicut,
+            passionate about web development and design.
+            Welcome to my portfolio website—a showcase of my
+            creative work and technical skills.
+            I'm always open to new learning experiences and
+            exciting opportunities in the digital world.
           </div>
-          <div class="btn-pink" id="btn">Hire Me</div>
+
+          <div class="btn-pink hire-me" id="btn">Hire Me</div>
         </div>
 
         <div class="intro-right">
@@ -122,31 +104,27 @@
           <div class="project-content project-content-left">
 
             <div class="project-skills-container">
-              <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-              <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-              <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="project-skill" src="./images/stack/Express.png" alt="" />
-              <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-              <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-              <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
-              <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
-              <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
-              <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+              <img class="project-skill" src="./images/stack/android.png" alt="" />
+              <img class="project-skill" src="./images/stack/xml.png" alt="" />
+              <img class="project-skill" src="./images/stack/java.png" alt="" />
+              <img class="project-skill" src="./images/stack/database-storage.png" alt="" />
             </div>
 
-            <h2 class="project-heading">Tint & Orange</h2>
+            <h2 class="project-heading">NITC Resource Management System</h2>
 
-            <p class="project-subHeading">Its is a car modification copany
-              which provide you sheets to protect your car from scratch
+            <p class="project-subHeading">
+              This Android project, built with Java and 
+              used XML for the frontend, seamlessly integrates with 
+              Firebase Realtime Database for efficient backend data management.
             </p>
             <div class="btn-grp">
-              <button class="btn-pink btn-project">Read More</button>
-              <a href="">
+              <!-- <button class="btn-pink btn-project">Read More</button> -->
+              <a href="https://github.com/junaid975a/NITCRMS">
                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i title="Live Link" class="fa-solid fa-link icon"></i>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -158,21 +136,20 @@
               <img class="project-skill" src="./images/stack/HTML.png" alt="" />
               <img class="project-skill" src="./images/stack/CSS.png" alt="" />
               <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-              <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-              <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
-              <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+              <img class="project-skill" src="./images/stack/api.png" alt="" />
             </div>
-            <h2 class="project-heading">Breaking Copyrights</h2>
+            <h2 class="project-heading">Weather App</h2>
             <p class="project-sub-heading">
-              A platform to download copyrights free youtube music
+              A web-based Weather App developed using HTML, CSS, and
+               JavaScript that utilizes APIs to provide 
+               real-time weather information based on user location or city input.
             </p>
             <div class="btn-grp">
-              <button class="btn-pink btn-project">Read More</button>
-              <a href="">
+              <!-- <button class="btn-pink btn-project">Read More</button> -->
+              <a href="https://github.com/junaid975a/weather_app">
                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
               </a>
-              <a href="">
+              <a href="https://junaid975a.github.io/weather_app/">
                 <i title="Live Link" class="fa-solid fa-link icon"></i>
               </a>
             </div>
@@ -186,21 +163,22 @@
               <img class="project-skill" src="./images/stack/HTML.png" alt="" />
               <img class="project-skill" src="./images/stack/CSS.png" alt="" />
               <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-              <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-              <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-              <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+              <img class="project-skill" src="./images/stack/api.png" alt="" />
             </div>
 
-            <h2 class="project-heading">Isha Tattva</h2>
+            <h2 class="project-heading">Github Finder</h2>
             <p class="project-sub-heading">
-              A Website for interior designer to showcase her works and samples
+              A web-based Github profile finder developed 
+              using HTML, CSS, and JavaScript. 
+              It utilizes the GitHub API to retrieve and
+               display detailed user profiles based on the username entered.
             </p>
             <div class="btn-grp">
-              <button class="btn-pink btn-project">Read More</button>
-              <a href="">
+              <!-- <button class="btn-pink btn-project">Read More</button> -->
+              <a href="https://github.com/junaid975a/github_detector">
                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
               </a>
-              <a href="">
+              <a href="https://junaid975a.github.io/github_detector/">
                 <i title="Live Link" class="fa-solid fa-link icon"></i>
               </a>
             </div>
@@ -211,23 +189,25 @@
           <div class="project-number project-number-left">04</div>
           <div class="project-content project-content-right">
             <div class="project-skill-container">
-              <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-              <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-              <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+              <img class="project-skill" src="./images/stack/java.png" alt="" />
+              <img class="project-skill" src="./images/stack/xml.png" alt="" />
+              <img class="project-skill" src="./images/stack/mysql.png" alt="" />
+              <img class="project-skill" src="./images/stack/sql-server.png" alt="" />
             </div>
-            <h2 class="project-heading">Granit</h2>
+            <h2 class="project-heading">Inventory Management System</h2>
             <p class="project-sub-heading">
-              A architectural website to plan your building or home (Hebrew
-              Language)
+              A desktop application built using Java Swing(framework) and XML 
+              for the frontend. It utilizes a MySQL database to 
+              efficiently manage and structure inventory data.
             </p>
             <div class="btn-grp">
-              <button class="btn-pink btn-project">Read More</button>
-              <a href="">
+              <!-- <button class="btn-pink btn-project">Read More</button> -->
+              <a href="https://github.com/junaid975a/inventory_managment_system">
                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i title="Live Link" class="fa-solid fa-link icon"></i>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -249,20 +229,21 @@
 
         <div class="skill-subHeading">
           <p>
-            Hi Everyone My name is John Doe I am a Full Stack Web Developer I
-            have been working for last 3 Years and Currently I am working with a
-            Budding Startup in USA and a full Time Freelancer. Currently I am
-            working on NextJs and Making Beautiful UI-UX are my fey features
+            I am an MCA student at NIT Calicut, 
+            where I'm exploring the realms of frontend and backend development. 
+            With a strong academic background in computer science, 
+            my college experience has been pivotal in shaping my tech journey.
           </p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-            doloremque aspernatur, maiores voluptatum minus laudantium?
-            Perspiciatis accusamus minima porro dolores necessitatibus, magni
-            dolorem et qui veniam nulla sequi molestiae maxime.
+            I'm actively working with ReactJS, 
+            showcasing my proficiency in frontend development. 
+            While my Android development skills are in the early stages, 
+            I'm dedicated to expanding my expertise in this field.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quidem
-            quos ullam veritatis voluptates tenetur qui ipsa nulla culpa itaque?
+            Currently, I'm in the process of expanding my skills to become a full-stack developer
+             and have a solid foundation in Android app development. 
+             My tech stack continues to evolve, fueled by a passion for learning and a commitment to innovation.
           </p>
         </div>
       </div>
@@ -304,16 +285,16 @@
 
 
         <div class="form-container">
-          <form class="form" action="">
+          <form class="form" id="contact-form" action="">
             <div class="formfield-container">
-              <input class="formfield" type="text" name="name" id="" placeholder="Enter your name" />
+              <input class="formfield" type="text" name="name" id="name" placeholder="Enter your name *" required />
 
-              <input class="formfield" type="email" name="email" id="" placeholder="Enter your email address" />
+              <input class="formfield" type="email" name="email" id="email" placeholder="Enter your email address *" required/>
 
-              <input class="formfield" type="text" name="subject" id="" placeholder="Enter your subject" />
+              <input class="formfield" type="text" name="subject" id="subject" placeholder="Enter your subject *" required/>
 
-              <textarea name="message" id="" cols="30" rows="10" class="formfield formfield-textarea"
-                placeholder="Enter your message"></textarea>
+              <textarea name="message" id="message" cols="30" rows="10" class="formfield formfield-textarea"
+                placeholder="Enter your message *" required></textarea>
 
             </div>
 
@@ -349,11 +330,30 @@
           </div>
 
           <div class="icon-wrapper">
-            <i class="fa-brands fa-linkedin icon"></i>
+            <!-- <i class="fa-brands fa-linkedin icon"></i>
             <i class="fa-brands fa-github icon"></i>
             <i class="fa-brands fa-twitter icon"></i>
             <i class="fa-brands fa-instagram icon"></i>
-            <i class="fa-regular fa-envelope icon"></i>
+            <i class="fa-regular fa-envelope icon"></i> -->
+            <!-- LinkedIn Icon with Link -->
+            <a href="https://www.linkedin.com/in/junaid-ansari-b405021b4/" target="_blank">
+              <i class="fa-brands fa-linkedin icon"></i>
+            </a>
+
+            <!-- GitHub Icon with Link -->
+            <a href="https://github.com/junaid975a" target="_blank">
+              <i class="fa-brands fa-github icon"></i>
+            </a>
+
+            <!-- Instagram Icon with Link -->
+            <a href="https://www.instagram.com/junaid975_a/" target="_blank">
+              <i class="fa-brands fa-instagram icon"></i>
+            </a>
+
+            <!-- Email Icon (replace 'your-email@example.com' with your actual email address) -->
+            <a href="mailto:junaidansari21975@gmail.com">
+              <i class="fa-regular fa-envelope icon"></i>
+            </a>
           </div>
 
         </div>
@@ -364,6 +364,7 @@
 
   </div>
 
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
   <script>
@@ -371,7 +372,7 @@
       strings: [
         "Full Stack Developer",
         "Web Developer",
-        "UI Designer",
+        "UI-UX Designer",
         "Backend Developer",
         "Coder",
       ],
@@ -383,6 +384,64 @@
 
 
   </script>
+  <script>
+    // Get the "Hire Me" button element
+    var hireMeButton = document.querySelector('.hire-me');
+
+    // Add a click event listener to the button
+    hireMeButton.addEventListener('click', function () {
+      // Define your email address
+      var email = 'junaidansari21975@gmail.com';
+
+      // Define the subject of the email
+      var subject = 'Hiring Inquiry';
+
+      // Define the email body (you can modify this as needed)
+      var body = 'Hello, I am interested in hiring you for a project.';
+
+      // Create the mailto link
+      var mailtoLink = 'mailto:' + email + '?subject=' + encodeURIComponent(subject) + '&body=' + encodeURIComponent(body);
+
+      // Create an invisible <a> element to trigger the email client
+      var emailLink = document.createElement('a');
+      emailLink.href = mailtoLink;
+
+      // Trigger a click event on the invisible <a> element
+      emailLink.click();
+    });
+  </script>
+  <script>
+    emailjs.init("GImspHamHANuTuPxv");
+
+    var contactForm = document.getElementById('contact-form');
+
+    contactForm.addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        var name = document.getElementById('name').value;
+        var email = document.getElementById('email').value;
+        var subject = document.getElementById('subject').value;
+        var message = document.getElementById('message').value;
+
+        var emailParams = {
+            from_name: name,
+            from_email: email,
+            subject: subject,
+            message_html: message,
+        };
+
+        emailjs.send('service_10562he', 'template_5ejjz6g', emailParams)
+            .then(function (response) {
+                console.log('Email sent successfully:', response);
+                alert('Message sent successfully!');
+            })
+            .catch(function (error) {
+                console.error('Email could not be sent:', error);
+                alert('An error occurred. Please try again later.');
+            });
+    });
+</script>
+  
 
 </body>
 
