fixed some classes names

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <img class="project-skill" src="./images/stack/api.png" alt="" />
             </div>
             <h2 class="project-heading">Weather App</h2>
-            <p class="project-sub-heading">
+            <p class="project-subHeading">
               A web-based Weather App developed using HTML, CSS, and
                JavaScript that utilizes APIs to provide 
                real-time weather information based on user location or city input.
@@ -167,7 +167,7 @@
             </div>
 
             <h2 class="project-heading">Github Finder</h2>
-            <p class="project-sub-heading">
+            <p class="project-subHeading">
               A web-based Github profile finder developed 
               using HTML, CSS, and JavaScript. 
               It utilizes the GitHub API to retrieve and
@@ -195,7 +195,7 @@
               <img class="project-skill" src="./images/stack/sql-server.png" alt="" />
             </div>
             <h2 class="project-heading">Inventory Management System</h2>
-            <p class="project-sub-heading">
+            <p class="project-subHeading">
               A desktop application built using Java Swing(framework) and XML 
               for the frontend. It utilizes a MySQL database to 
               efficiently manage and structure inventory data.
