added latest project.nitc_buy_sell

--- a/index.html
+++ b/index.html
@@ -211,6 +211,41 @@
             </div>
           </div>
         </div>
+
+        <div class="project-card" id="project5">
+          <div class="project-number project-number-right">05</div>
+          <div class="project-content project-content-left">
+
+            <div class="project-skills-container">
+              <img class="project-skill" src="./images/stack/React.png" alt="" />
+              <img class="project-skill" src="./images/stack/Express.png" alt="" />
+              <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+              <img class="project-skill" src="./images/stack/mysql.png" alt="" />
+              <img class="project-skill" src="./images/stack/database-storage.png" alt="" />
+              <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+              <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+              <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+              <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+            </div>
+
+            <h2 class="project-heading">NITC Buy and Sell</h2>
+
+            <p class="project-subHeading">
+              This web application, built with ReactJS, Node.js, Express.js, and MySQL,
+      is styled using Tailwind CSS. It allows users to sell used goods within the institute.
+      My contribution to the project was designing and implementing the frontend using React and Tailwind CSS.
+            </p>
+            <div class="btn-grp">
+              <!-- <button class="btn-pink btn-project">Read More</button> -->
+              <a href="https://github.com/junaid975a/NITC_buy_and_sell">
+                <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+              </a>
+              <!-- <a href="">
+                <i title="Live Link" class="fa-solid fa-link icon"></i>
+              </a> -->
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
