--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- project section -->
     <section id="testimonials">
       <h2 class="page-header">Projects</h2>
-      <div id="testimonial-carousel" class="carousel slide" data-bs-ride="false">
+      <div id="testimonial-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
 
           <div class="carousel-item active">
