--- a/index.html
+++ b/index.html
@@ -434,6 +434,46 @@
             </div>
 
           </div>
+
+          <div class="carousel-item">
+            <div class="project-card-holder">
+              <div class="project-card" id="project6">
+                <div class="project-number project-number-right">06</div>
+                <div class="project-content project-content-left">
+
+                  <div class="project-skills-container">
+                    <img class="project-skill" src="./images/stack/React.png" alt="" />
+                    <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                    <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/database-storage.png" alt="" />
+                    <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                    <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                    <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                    <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                  </div>
+
+                  <h2 class="project-heading">StudyNotion</h2>
+
+                  <p class="project-subHeading">
+                    This web application, built with ReactJS, Node.js, Express.js, and MongoDB,
+                    is styled using Tailwind CSS. It allows Instructors to create their courses 
+                    and students to buy and to be enrolled in the courses.
+                  </p>
+                  <div class="btn-grp">
+                    <!-- <button class="btn-pink btn-project">Read More</button> -->
+                    <a href="https://github.com/junaid975a/NITC_buy_and_sell">
+                      <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                    </a>
+                    <a href="https://study-notion-iota-navy.vercel.app/">
+                      <i title="Live Link" class="fa-solid fa-link icon"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
